--- a/env.example
+++ b/env.example
@@ -3,9 +3,7 @@ NODE_ENV=development
 PORT=3000
 API_PREFIX=api/v1
 
-# Configurações do Banco de Dados (externo)
-DB_HOST=your-database-host.com
-DB_PORT=5432
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
-DB_NAME=your_database_name 
+# Configurações do Banco de Dados (opcional - usa valores padrão se não definido)
+DB_NAME=transfer_service
+DB_USERNAME=transfer_user
+DB_PASSWORD=transfer_password 
