--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,31 @@
 version: "3.8"
 
 services:
+  # Banco de Dados PostgreSQL (Desenvolvimento)
+  postgres:
+    image: postgres:15-alpine
+    container_name: transfer-postgres-dev
+    environment:
+      - POSTGRES_DB=${DB_NAME:-transfer_service}
+      - POSTGRES_USER=${DB_USERNAME:-transfer_user}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-transfer_password}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data_dev:/var/lib/postgresql/data
+    networks:
+      - transfer-network
+    restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${DB_USERNAME:-transfer_user} -d ${DB_NAME:-transfer_service}",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   # Microserviço de Transferência (Desenvolvimento)
   transfer-service-dev:
     build:
@@ -14,19 +39,26 @@ services:
       - NODE_ENV=development
       - PORT=3000
       - API_PREFIX=api/v1
-      # Configurações do banco de dados (externo)
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
+      # Configurações do banco de dados
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USERNAME=${DB_USERNAME:-transfer_user}
+      - DB_PASSWORD=${DB_PASSWORD:-transfer_password}
+      - DB_NAME=${DB_NAME:-transfer_service}
     volumes:
       - .:/app
       - /app/node_modules
+    depends_on:
+      postgres:
+        condition: service_healthy
     networks:
       - transfer-network
     restart: unless-stopped
     command: npm run start:dev
+
+volumes:
+  postgres_data_dev:
+    driver: local
 
 networks:
   transfer-network:
