--- a/env.example
+++ b/env.example
@@ -6,4 +6,11 @@ API_PREFIX=api/v1
 # Configurações do Banco de Dados (opcional - usa valores padrão se não definido)
 DB_NAME=transfer_service
 DB_USERNAME=transfer_user
-DB_PASSWORD=transfer_password 
+DB_PASSWORD=transfer_password
+
+# Configurações do RabbitMQ (opcional - usa valores padrão se não definido)
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_VHOST=/ 
