--- a/microservices/client-service/Dockerfile
+++ b/microservices/client-service/Dockerfile
@@ -1,27 +1,48 @@
-# Estágio de desenvolvimento
-FROM node:18-alpine AS development
+# Build stage
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
 
-RUN npm ci
+# Install dependencies
+RUN npm ci --only=production
 
+# Copy source code
 COPY . .
 
+# Build the application
 RUN npm run build
 
-# Estágio de produção
+# Production stage
 FROM node:18-alpine AS production
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
 
+# Install only production dependencies
 RUN npm ci --only=production && npm cache clean --force
 
-COPY --from=development /app/dist ./dist
+# Copy built application from builder stage
+COPY --from=builder /app/dist ./dist
 
-EXPOSE 3000
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nestjs -u 1001
 
+# Change ownership of the app directory
+RUN chown -R nestjs:nodejs /app
+USER nestjs
+
+# Expose port
+EXPOSE 3001
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node healthcheck.js
+
+# Start the application
 CMD ["node", "dist/main"] 
