--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "postgresql",
     "rabbitmq",
     "docker"
-  ]
+  ],
+  "dependencies": {
+    "@nestjs/axios": "^4.0.1",
+    "axios": "^1.11.0"
+  }
 }
