--- a/microservices/client-service/package.json
+++ b/microservices/client-service/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "amqplib": "^0.10.8",
     "bcrypt": "^6.0.0",
@@ -40,6 +41,7 @@
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
