deploy na aws pronto

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -27,6 +27,23 @@ services:
       timeout: 5s
       retries: 5
 
+  # Redis
+  redis:
+    image: redis:7-alpine
+    container_name: platform-redis-dev
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data_dev:/data
+    networks:
+      - platform-network-dev
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   # RabbitMQ
   rabbitmq:
     image: rabbitmq:3-management-alpine
@@ -74,6 +91,9 @@ services:
       - RABBITMQ_USERNAME=${RABBITMQ_USERNAME:-guest}
       - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD:-guest}
       - RABBITMQ_VHOST=${RABBITMQ_VHOST:-/}
+      # Configurações do Redis
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     volumes:
       - ./microservices/transfer-service:/app
       - /app/node_modules
@@ -82,6 +102,55 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - platform-network-dev
+    restart: unless-stopped
+    command: npm run start:dev
+
+  # Microserviço de Cliente (Dev)
+  client-service-dev:
+    build:
+      context: ./microservices/client-service
+      dockerfile: Dockerfile
+      target: development
+    container_name: client-service-dev
+    ports:
+      - "3001:3001"
+    environment:
+      - NODE_ENV=development
+      - PORT=3001
+      - API_PREFIX=api/v1
+      # Configurações do banco de dados
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USERNAME=${DB_USERNAME:-platform_user}
+      - DB_PASSWORD=${DB_PASSWORD:-platform_password}
+      - DB_NAME=${DB_NAME:-microservices_platform}
+      # Configurações do RabbitMQ
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME:-guest}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD:-guest}
+      - RABBITMQ_VHOST=${RABBITMQ_VHOST:-/}
+      # Configurações do Redis
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      # Configurações JWT
+      - JWT_SECRET=${JWT_SECRET:-your-super-secret-key-change-in-production}
+      - JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-15m}
+      - JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN:-7d}
+    volumes:
+      - ./microservices/client-service:/app
+      - /app/node_modules
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
       - platform-network-dev
     restart: unless-stopped
@@ -89,6 +158,8 @@ services:
 
 volumes:
   postgres_data_dev:
+    driver: local
+  redis_data_dev:
     driver: local
   rabbitmq_data_dev:
     driver: local
