--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 node_modules
 dist
-package-lock.json
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env.example
+deploy-simples.sh
+aws
