--- a/microservices/client-service/package.json
+++ b/microservices/client-service/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -30,9 +31,11 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "amqplib": "^0.10.8",
+    "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cpf-cnpj-validator": "^1.0.3",
     "ioredis": "^5.6.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
